--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,8 @@ proj2/BaralhosExemplo.o
 proj2/Blackjack.o
 proj2/Blackjack.exe
 proj2/Blackjack.hi
+proj3/p3_56326_56380/Blackjack.hi
+proj3/p3_56326_56380/Blackjack.o
+proj3/p3_56326_56380/Main.exe
+proj3/p3_56326_56380/Main.hi
+proj3/p3_56326_56380/Main.o
